Commit after half functions completion

--- a/athletic_sales_analysis.ipynb
+++ b/athletic_sales_analysis.ipynb
@@ -24,12 +24,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read the CSV files into DataFrames.\n"
+    "# Read the CSV files into DataFrames.\n",
+    "\n",
+    "file_1 = 'Resources/athletic_sales_2020.csv'\n",
+    "file_2 = 'Resources/athletic_sales_2021.csv'\n",
+    "\n",
+    "df_1 = pd.read_csv(file_1)\n",
+    "df_2 = pd.read_csv(file_2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -281,18 +287,20 @@
        "[1297 rows x 12 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Display the 2020 sales DataFrame\n"
+    "# Display the 2020 sales DataFrame\n",
+    "\n",
+    "df_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -544,13 +552,15 @@
        "[8346 rows x 12 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Display the 2021 sales DataFrame\n"
+    "# Display the 2021 sales DataFrame\n",
+    "\n",
+    "df_2"
    ]
   },
   {
@@ -562,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -592,12 +602,13 @@
     }
    ],
    "source": [
-    "# Check the 2020 sales data types.\n"
+    "# Check the 2020 sales data types.\n",
+    "df_1.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +638,9 @@
     }
    ],
    "source": [
-    "# Check the 2021 sales data types.\n"
+    "# Check the 2021 sales data types.\n",
+    "\n",
+    "df_2.info()"
    ]
   },
   {
@@ -639,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -891,18 +904,22 @@
        "[9643 rows x 12 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Combine the 2020 and 2021 sales DataFrames on the rows and reset the index.\n"
+    "# Combine the 2020 and 2021 sales DataFrames on the rows and reset the index.\n",
+    "\n",
+    "combined_df = pd.concat([df_1, df_2], ignore_index=True)\n",
+    "combined_df.reset_index(drop=True, inplace=True)\n",
+    "combined_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -923,18 +940,21 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check if any values are null.\n"
+    "# Check if any values are null.\n",
+    "\n",
+    "null_values = combined_df.isnull().sum()\n",
+    "null_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -964,12 +984,14 @@
     }
    ],
    "source": [
-    "# Check the data type of each column\n"
+    "# Check the data type of each column\n",
+    "\n",
+    "combined_df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1221,18 +1243,21 @@
        "[9643 rows x 12 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Convert the \"invoice_date\" to a datetime datatype\n"
+    "# Convert the \"invoice_date\" to a datetime datatype\n",
+    "\n",
+    "combined_df['invoice_date'] = pd.to_datetime(combined_df['invoice_date'], format='%m/%d/%y')\n",
+    "combined_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1287,9 @@
     }
    ],
    "source": [
-    "# Confirm that the \"invoice_date\" data type has been changed.\n"
+    "# Confirm that the \"invoice_date\" data type has been changed.\n",
+    "\n",
+    "combined_df.info()"
    ]
   },
   {
@@ -1281,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1386,7 @@
        "Southeast Florida    Miami                        73135"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,19 +1396,19 @@
     "# Rename the sum to \"Total_Products_Sold\".\n",
     "\n",
     "\n",
-    "# Show the top 5 results.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Using `pivot_table`"
+    "product_sales = combined_df.groupby(['region', 'state', 'city'])['units_sold'].sum()\n",
+    "product_sales = product_sales.rename(\"Total_Products_Sold\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Show the top 5 results.\n",
+    "product_sales = product_sales.to_frame()\n",
+    "product_sales.sort_values(by='Total_Products_Sold',ascending=False).head(5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1486,7 @@
        "Southeast Florida    Miami                        73135"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,11 +1494,19 @@
    "source": [
     "# Show the number products sold for region, state, and city.\n",
     "\n",
+    "region_product_pivot = combined_df.pivot_table(\n",
+    "    values='units_sold',\n",
+    "    index=['region', 'state', 'city'],\n",
+    "    aggfunc='sum'\n",
+    ")\n",
+    "\n",
     "\n",
     "# Rename the \"units_sold\" column to \"Total_Products_Sold\"\n",
+    "region_product_pivot = region_product_pivot.rename(columns={'units_sold': 'Total_Products_Sold'})\n",
     "\n",
     "\n",
-    "# Show the top 5 results.\n"
+    "# Show the top 5 results.\n",
+    "region_product_pivot.sort_values(by='Total_Products_Sold', ascending=False).head(5)"
    ]
   },
   {
@@ -1590,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1668,19 +1703,26 @@
        "          Florida        Orlando           27682851"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Show the total sales for the products sold for each region, state, and city.\n",
+    "region_sales_pivot = combined_df.pivot_table(\n",
+    "    values='total_sales',\n",
+    "    index=['region', 'state', 'city'],\n",
+    "    aggfunc='sum'\n",
+    ")\n",
     "\n",
     "\n",
     "# Optional: Rename the \"total_sales\" column to \"Total Sales\"\n",
+    "region_sales_pivot = region_sales_pivot.rename(columns={'total_sales': 'Total_Sales'})\n",
     "\n",
     "\n",
-    "# Show the top 5 results.\n"
+    "# Show the top 5 results.\n",
+    "region_sales_pivot.sort_values(by='Total_Sales', ascending=False).head(5)\n"
    ]
   },
   {
@@ -1808,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1895,19 +1937,27 @@
        "Foot Locker Southeast South Carolina Charleston        24822280"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Show the total sales for the products sold for each retailer, region, state, and city.\n",
+    "retailer_sales_pivot = combined_df.pivot_table(\n",
+    "    values='total_sales',\n",
+    "    index=['retailer', 'region', 'state', 'city'],\n",
+    "    aggfunc='sum'\n",
+    ")\n",
+    "\n",
     "\n",
     "\n",
     "# Optional: Rename the \"total_sales\" column to \"Total Sales\"\n",
+    "retailer_sales_pivot = retailer_sales_pivot.rename(columns={'total_sales': 'Total_Sales'})\n",
     "\n",
     "\n",
-    "# Show the top 5 results.\n"
+    "# Show the top 5 results.\n",
+    "retailer_sales_pivot.sort_values(by='Total_Sales', ascending=False).head(5)\n"
    ]
   },
   {
@@ -1919,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -2171,13 +2221,16 @@
        "[1604 rows x 12 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Filter the sales data to get the women's athletic footwear sales data.\n"
+    "# Filter the sales data to get the women's athletic footwear sales data.\n",
+    "womens_footwear_df = combined_df[combined_df['product'].str.contains(\"Women's Athletic Footwear\")]\n",
+    "\n",
+    "womens_footwear_df"
    ]
   },
   {
@@ -2298,7 +2351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2385,19 +2438,27 @@
        "Sports Direct South     Texas          Dallas                               8790"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Show the total number of women's athletic footwear sold for each retailer, region, state, and city.\n",
-    "\n",
+    "womens_footwear_sales_pivot = womens_footwear_df.pivot_table(\n",
+    "    values='units_sold',\n",
+    "    index=['retailer', 'region', 'state', 'city'],\n",
+    "    aggfunc='sum'\n",
+    ")\n",
     "\n",
     "# Rename the \"units_sold\" column to \"Womens_Footwear_Units_Sold\"\n",
+    "womens_footwear_sales_pivot = womens_footwear_sales_pivot.rename(columns={'units_sold': 'Womens_Footwear_Units_Sold'})\n",
     "\n",
+    "# Show the top 5 results.\n",
+    "womens_footwear_sales_pivot.sort_values(by='Womens_Footwear_Units_Sold', ascending=False).head(5)\n",
     "\n",
-    "# Show the top 5 results.\n"
+    "#top_5_women_footwear_sales = womens_footwear_sales_pivot.sort_values(by='Womens_Footwear_Units_Sold', ascending=False).head(5)\n",
+    "#top_5_women_footwear_sales"
    ]
   },
   {
@@ -2756,7 +2817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
